# rustcompress

./: .gitignore  Cargo.toml  README.md  SOURCES.md
benches/: compress.rs  decompress.rs  decompress_mine.rs  decompress_other.rs  decompress_sdk.rs
examples/: stress.rs  stress2.rs  test.rs  test_compress.rs  test_decompress.rs
src/: lib.rs
src/compressors/: mod.rs
src/compressors/lzma/: data_buffers.rs  encoder_data_buffer.rs  length_codec.rs  literals_codec.rs  mod.rs  range_codec.rs
src/compressors/lzma/codecs/: header_codec.rs  length_codec.rs  literals_codec.rs  lzma_stream_codec.rs  mod.rs  range_codec.rs
src/compressors/lzma/codecs/literals_codec/: subcoder.rs
src/compressors/lzma/codecs/lzma_stream_codec/: data_buffers.rs  encoders.rs  prices.rs  state.rs
src/compressors/lzma/codecs/lzma_stream_codec/data_buffers/: cyclic_buffer.rs
src/compressors/lzma/codecs/lzma_stream_codec/encoders/: instructions_fast.rs  instructions_normal.rs  instructions_normal2.rs  match_finding.rs  mod.rs
src/compressors/lzma/codecs/range_codec/: price.rs  probability.rs
src/compressors/lzma/data_buffers/: cyclic_buffer.rs
src/compressors/lzma/encoders/: instructions_fast.rs  mod.rs
src/compressors/lzma/match_finding/: brute_force.rs  hash234.rs  hc4.rs  mod.rs
src/compressors/lzma/match_finding/utils/: cyclic_vec.rs  hash234.rs  lz_encoder_input_buffer.rs  match_positions.rs  mod.rs
src/compressors/lzma/range_codec/: price.rs
src/utils/: cache_cell.rs  const_variable_arr.rs  mod.rs
(+5 files in other folders)
