[package]
name = "rustcompress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-macro = "2.1.5"
byteorder = "1.4.3"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.5.1"
rust-lzma = "0.6.0"
lzma-rust = { path = "/home/arduano/programming/downloaded/sevenz-rust/lzma-rust" }


[[bench]]
name = "decompress_mine"
harness = false

[[bench]]
name = "decompress_other"
harness = false

[[bench]]
name = "decompress_sdk"
harness = false

[profile.release]
debug = true
